--- a/Wireshark-4.0.7
+++ b/Wireshark-4.0.7
@@ -71,7 +71,7 @@ intel_download="https://2.na.dl.wireshark.org/osx/Wireshark%204.0.7%20Intel%2064
 #Developer ID authority: /usr/bin/codesign -dvv "/Applications/EXAMPLE.app" 2>&1 | /usr/bin/grep "Developer ID Application" | /usr/bin/cut -d ':' -f2 | /usr/bin/xargs
 #Team Identifier: /usr/bin/codesign -dvv "/Applications/EXAMPLE.app" 2>&1 | /usr/bin/grep "TeamIdentifier" | /usr/bin/cut -d '=' -f2
 
-dev_id_authority='7Z6EMTD2C6'
+dev_id_authority='Wireshark Foundation, Inc. (7Z6EMTD2C6)'
 team_identifier='7Z6EMTD2C6'
 
 # NOTE: By default, script will only build PKG if both Intel + Apple silicon .apps have identical versions and bundle identifiers
